2005-04-05  Douglas Bates  <bates@bates1-home>

	* R/lmer.R: Update of the "with" method.
	* : Removed humongous PDF file accidently included in tarball.
	Created release 0.95-3.
	

2005-02-27  Douglas Bates  <bates@bates1-home>

	* R/lme.R: Removed the stubs of the plot methods.

	* NAMESPACE: Remove imports from the Matrix package as it is a
	listed in the Depends.

2005-02-24  Douglas Bates  <bates@bates1-home>

	* R/lmer.R (fn): Added an anova method for lmer objects that
	provides F tests based on the terms object.
	* data/ and man/: Moved all data sets from "Mixed-Effects Models
	in S and S-PLUS" to the MEMSS package and all other test data sets
	to the mlmRev package.

2005-01-24  Douglas Bates  <bates@bates7>

	* man/{guPrenat.Rd,guImmun.Rd,s3bbx.Rd,s3bby.Rd}: Add
	\encoding{latin1} per Kurt's request. 

2005-01-23  Douglas Bates  <bates@bates7>

	* R/lmer.R (fn): In the gradient function passed to optim, check
	if the parameters are equal to the current values before
	installing them.  This could save an unnecessary decomposition.

2005-01-22  Douglas Bates  <bates@bates7>

	* R/lmer.R (lmer): Changes in formulas code to allow explicit
	interactions in the grouping factors and formula without a fixed
	term.

2005-01-03  Douglas Bates  <bates@bates1-home>

	* R/lmer.R: Switch from lmeRep to lmer representation

2004-12-16  Douglas Bates  <bates@bates1-home>

	* R/lme.R (make.mf.call): Omit control values that are no longer used.

2004-12-13  Douglas Bates  <bates@bates1-home>

	* R/lme.R (lmeControl): Change msVerbose to an integer value.

	* R/ssclme.R: Change parameterization for optimization to
	constrained version that approaches the boundary safely.

	* tests/egsingle.R: Added regression test for multiple grouping
	factors with multivariate random effects.

2004-10-04  Douglas Bates  <bates@bates1-home>

	* R/lme.R: Corrected number of arguments to lmeRep_sigma

2004-10-02  Douglas Bates  <bates@bates1-home>
