@@ -1,6 +1,6 @@
 Package: lme4
-Version: 0.95-3
-Date: 2005-04-05
+Version: 0.95-4
+Date: 2005-04-06
 Title: Linear mixed-effects models using S4 classes
 Author: Douglas Bates <bates@stat.wisc.edu> and
 	Deepayan Sarkar <deepayan@stat.wisc.edu>
@@ -12,4 +12,4 @@ Suggests: mlmRev
 SaveImage: no
 LazyLoad: yes
 License: GPL version 2 or later
-Packaged: Tue Apr  5 17:23:58 2005; bates
+Packaged: Wed Apr  6 17:50:46 2005; bates
